# Dynapse

./: .gitignore  CMakeLists.txt  README.md  test.cc
include/dynapse/: any.h  dynapse.h  prototype.h  reflect.h  types.h
src/: any.cc  prototype.cc  reflect.cc
